added missing result filter to inference
Signed-off-by: br3no <breno@veltefaria.de>